Fixed: images upload overflow

--- a/public/static/scss/upload_steps/upload_step5.scss
+++ b/public/static/scss/upload_steps/upload_step5.scss
@@ -166,6 +166,10 @@ form {
         line-height: 21px;
       }
 
+      &__file-box {
+        height: 250px;
+      }
+
       &__images {
         gap: 13px;
 
